--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -1,16 +1,90 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Order Success — Robyn and Gold</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="/src/css/styles.css" />
+  <meta charset="UTF-8" />
+  <title>Order Confirmed — Robyn &amp; Gold</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Thank you for your order from Robyn &amp; Gold antique jewellery."
+  />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Inter:wght@300;400;500;600&display=swap"
+    rel="stylesheet"
+  />
+
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="icon" type="image/png" href="../images/favicon.png" />
 </head>
-<body>
+<body class="page">
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="/" class="brand">
+        <span class="brand-main">Robyn &amp; Gold</span>
+        <span class="brand-tagline">Antique Jewellery</span>
+      </a>
+
+      <nav class="nav">
+        <a href="/pages/shop.html" class="nav-link">Shop</a>
+        <a href="/index.html#about" class="nav-link">Our story</a>
+        <a href="/index.html#ethos" class="nav-link">Ethos</a>
+        <a href="/pages/cart.html" class="nav-link nav-link--cart">
+          Cart
+          <span id="cart-count" class="cart-count">0</span>
+        </a>
+      </nav>
+    </div>
+  </header>
+
   <main>
-    <h1>Thank you — your order is confirmed</h1>
-    <p>We’ve sent a confirmation email (if provided). Check your Stripe dashboard for payment details.</p>
-    <a href="/src/pages/shop.html">Return to shop</a>
+    <section class="section">
+      <div class="container success-layout">
+        <div class="success-card">
+          <p class="eyebrow">Order confirmed</p>
+          <h1 class="page-title">Thank you for choosing Robyn &amp; Gold.</h1>
+          <p class="page-intro">
+            Your order has been received and a confirmation email has been sent with the details.
+            We’ll be in touch shortly with shipping information.
+          </p>
+
+          <p class="success-note">
+            Each piece is carefully packaged and fully insured from our base in Ireland.  
+            If you have any questions about your order, reply to your confirmation email or contact us at
+            <a href="mailto:hello@robynandgold.com">hello@robynandgold.com</a>.
+          </p>
+
+          <div class="success-actions">
+            <a href="/pages/shop.html" class="btn btn-primary">Continue browsing</a>
+            <a href="/index.html#about" class="btn btn-ghost">Read our story</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <div class="footer-brand">
+        <span class="brand-main">Robyn &amp; Gold</span>
+        <span class="brand-tagline">Antique Jewellery</span>
+      </div>
+      <div class="footer-links">
+        <a href="/pages/shop.html" class="footer-link">Shop</a>
+        <a href="/index.html#about" class="footer-link">About</a>
+        <a href="/index.html#ethos" class="footer-link">Ethos</a>
+        <a href="mailto:hello@robynandgold.com" class="footer-link">Contact</a>
+      </div>
+      <p class="footer-meta">© <span id="year"></span> Robyn &amp; Gold. All rights reserved.</p>
+    </div>
+  </footer>
+
+  <script src="../js/cart.js"></script>
+  <script src="../js/main.js"></script>
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
