--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,11 @@
   <header class="site-header">
     <div class="container header-inner">
       <a href="/" class="brand">
-        <span class="brand-main">Robyn &amp; Gold</span>
-        <span class="brand-tagline">Antique Jewellery</span>
+        <img src="images/logo.png" alt="Robyn & Gold" class="brand-logo" />
+        <div class="brand-text">
+          <span class="brand-main">Robyn &amp; Gold</span>
+          <span class="brand-tagline">Antique Jewellery</span>
+        </div>
       </a>
 
       <nav class="nav">
