--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -21,11 +21,14 @@
 </head>
 <body class="page">
   <header class="site-header">
-    <div class="container header-inner">
-      <a href="/" class="brand">
-        <span class="brand-main">Robyn &amp; Gold</span>
-        <span class="brand-tagline">Antique Jewellery</span>
-      </a>
+          <a href="/" class="brand">
+            <img src="../images/logo.png" alt="Robyn & Gold" class="brand-logo" />
+            <div class="brand-text">
+              <span class="brand-main">Robyn &amp; Gold</span>
+              <span class="brand-tagline">Antique Jewellery</span>
+            </div>
+          </a>
+
 
       <nav class="nav">
         <a href="/pages/shop.html" class="nav-link">Shop</a>
