--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
-    content="Robyn &amp; Gold curates antique and vintage gold jewellery — one-of-a-kind rings and heirlooms, chosen for their craftsmanship and quiet beauty."
+    content="Robyn &amp; Gold curates antique and vintage gold jewellery — rings with history, chosen for their craftsmanship and quiet beauty."
   />
 
   <!-- Google Fonts: classic serif + clean sans -->
@@ -51,8 +51,8 @@
           <p class="eyebrow">Curated antique rings</p>
           <h1>Antique jewellery for lives that don’t follow trends.</h1>
           <p class="hero-text">
-            Robyn &amp; Gold curates one-of-a-kind vintage and antique pieces in solid gold and natural diamonds –
-            jewellery chosen for its craftsmanship, history and quiet beauty.
+            Robyn &amp; Gold curates vintage and antique pieces in solid gold and natural diamonds – jewellery chosen
+            for its craftsmanship, history and quiet beauty.
           </p>
           <div class="hero-actions">
             <a href="pages/shop.html" class="btn btn-primary">Explore the collection</a>
@@ -68,7 +68,7 @@
               class="hero-image"
             />
             <div class="hero-card-caption">
-              <p class="hero-card-title">The Heirloom Edit</p>
+              <p class="hero-card-title">Current collection</p>
               <p class="hero-card-text">Victorian, Edwardian &amp; Art Deco rings, chosen to be worn every day.</p>
             </div>
           </div>
@@ -80,8 +80,8 @@
               class="hero-image"
             />
             <div class="hero-card-caption hero-card-caption--small">
-              <p class="hero-card-title">One-of-a-kind</p>
-              <p class="hero-card-text">Each piece is unique – once it’s gone, it’s gone.</p>
+              <p class="hero-card-title">Small releases</p>
+              <p class="hero-card-text">Pieces added in considered drops throughout the year.</p>
             </div>
           </div>
         </div>
@@ -191,10 +191,10 @@
             </p>
           </div>
           <div class="pillar">
-            <h3>One-of-a-kind</h3>
+            <h3>Thoughtfully curated</h3>
             <p>
-              Once a Robyn &amp; Gold piece finds its owner, it is gone. No restocks, just a small, evolving collection
-              of rings with real character.
+              Each Robyn &amp; Gold piece is carefully selected in small quantities. No mass production, just a
+              considered collection of rings with real character.
             </p>
           </div>
         </div>
