--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -21,14 +21,14 @@
 </head>
 <body class="page">
   <header class="site-header">
-          <a href="/" class="brand">
-            <img src="../images/logo.png" alt="Robyn & Gold" class="brand-logo" />
-            <div class="brand-text">
-              <span class="brand-main">Robyn &amp; Gold</span>
-              <span class="brand-tagline">Antique Jewellery</span>
-            </div>
-          </a>
-
+    <div class="container header-inner">
+      <a href="/" class="brand">
+        <img src="../images/logo.png" alt="Robyn & Gold" class="brand-logo" />
+        <div class="brand-text">
+          <span class="brand-main">Robyn &amp; Gold</span>
+          <span class="brand-tagline">Antique Jewellery</span>
+        </div>
+      </a>
 
       <nav class="nav">
         <a href="/pages/shop.html" class="nav-link">Shop</a>
@@ -85,9 +85,19 @@
   </footer>
 
   <script src="../js/cart.js"></script>
-  <script src="../js/main.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+    
+    // Clear cart after successful purchase
+    window.CartAPI.clearCart();
+    
+    // Get session ID from URL if present (optional - for tracking)
+    const params = new URLSearchParams(window.location.search);
+    const sessionId = params.get('session_id');
+    if (sessionId) {
+      console.log('Stripe session ID:', sessionId);
+      // You could send this to an analytics service if needed
+    }
   </script>
 </body>
 </html>
