--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       <div class="container hero-inner">
         <div class="hero-copy">
           <p class="eyebrow">Curated antique rings</p>
-          <h1>Antique jewellery for lives that don’t follow trends.</h1>
+          <h1>Antique jewellery for lives that don't follow trends.</h1>
           <p class="hero-text">
             Robyn &amp; Gold curates vintage and antique pieces in solid gold and natural diamonds – jewellery chosen
             for its craftsmanship, history and quiet beauty.
@@ -58,6 +58,14 @@
             <a href="pages/shop.html" class="btn btn-primary">Explore the collection</a>
             <a href="#about" class="btn btn-ghost">Our sourcing philosophy</a>
           </div>
+        </div>
+
+        <div class="hero-image-panel">
+          <img 
+            src="images/homepage.png" 
+            alt="Antique jewellery collection from Robyn & Gold" 
+            style="width: 100%; height: auto; border-radius: var(--radius-lg); box-shadow: var(--shadow-soft);"
+          />
         </div>
       </div>
     </section>
@@ -81,7 +89,7 @@
             <div class="product-card-body">
               <h3 class="product-card-title">Victorian Diamond Ring, c.1890</h3>
               <p class="product-card-meta">18ct gold · Old-cut diamonds</p>
-              <p class="product-card-price">£2,450</p>
+              <p class="product-card-price">€350</p>
               <a href="pages/product-detail.html?id=1" class="product-card-link">View details</a>
             </div>
           </article>
@@ -95,7 +103,7 @@
             <div class="product-card-body">
               <h3 class="product-card-title">Edwardian Sapphire Cluster, c.1905</h3>
               <p class="product-card-meta">18ct gold &amp; platinum · Natural sapphire</p>
-              <p class="product-card-price">£3,150</p>
+              <p class="product-card-price">€450</p>
               <a href="pages/product-detail.html?id=2" class="product-card-link">View details</a>
             </div>
           </article>
@@ -109,7 +117,7 @@
             <div class="product-card-body">
               <h3 class="product-card-title">Art Deco Solitaire, c.1930</h3>
               <p class="product-card-meta">Platinum · Old European-cut diamond</p>
-              <p class="product-card-price">£4,600</p>
+              <p class="product-card-price">€350</p>
               <a href="pages/product-detail.html?id=3" class="product-card-link">View details</a>
             </div>
           </article>
