--- a/src/pages/shop.html
+++ b/src/pages/shop.html
@@ -123,7 +123,7 @@
         <a href="/pages/shop.html" class="footer-link">Shop</a>
         <a href="/index.html#about" class="footer-link">About</a>
         <a href="/index.html#ethos" class="footer-link">Ethos</a>
-        <a href="mailto:hello@robynandgold.com" class="footer-link">Contact</a>
+        <a href="/pages/contact.html" class="footer-link">Contact</a>
       </div>
       <p class="footer-meta">© <span id="year"></span> Robyn &amp; Gold. All rights reserved.</p>
     </div>
