update image fallback source to homepage.png in multiple pages

--- a/src/index.html
+++ b/src/index.html
@@ -220,7 +220,7 @@
               src="${product.images[0]}"
               alt="${product.name}"
               class="product-card-image"
-              onerror="this.src='/images/products/placeholder.jpg'"
+              onerror="this.src='/images/homepage.png'"
             />
           </a>
           <div class="product-card-body">
