--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -138,7 +138,7 @@
             alt="${item.name}" 
             class="product-card-image"
             style="width: 100px; height: 100px; object-fit: cover; border-radius: var(--radius-md);"
-            onerror="this.src='../images/products/placeholder.jpg'"
+            onerror="this.src='../images/homepage.png'"
           />
           <div>
             <h3 class="product-card-title" style="margin-bottom: 0.3rem;">${item.name}</h3>
