--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -17,6 +17,7 @@
   />
 
   <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="icon" type="image/png" href="../images/favicon.png" />
 </head>
 <body class="page">
   <header class="site-header">
